--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,20 @@
 # Makefile for src directory
 # $Id$
 
-SUB_DIRS:= util classes gui mail adb wx
-UTILOBJ := util/strutil.o util/sysutil.o util/miscutil.o util/upgrade.o
-MOBJS   := $(UTILOBJ) classes/*.o gui/*.o  mail/*.o adb/*.o \
-	wx/generic/*.o wx/common/*.o wx/vcard/*.o
-
 include ../makeopts
+
+# use sub-make for M so wildcard dependencies are expanded correctly
+all:	subdirs
+	@$(MAKE) --no-print-directory M
 
 # List all directories which create modules (.so files) to be installed:
 #
-MOD_DIRS = adb
+MOD_DIRS:= modules adb
+
+SUB_DIRS:= $(MOD_DIRS) util classes gui mail wx
+UTILOBJ := util/strutil.o util/sysutil.o util/miscutil.o util/upgrade.o
+MOBJS   = $(UTILOBJ) classes/*.o gui/*.o mail/*.o adb/*.o \
+	wx/generic/*.o wx/common/*.o wx/vcard/*.o
 
 ifdef USE_PYTHON
 SUB_DIRS += Python
@@ -23,13 +27,7 @@ endif
 
 # LeakTracer must be the last object on the linker line!
 ifdef USE_LEAKTRACER
-MOBJS := $(MOBJS) util/LeakTracer.o
-endif
-
-ifeq ($(USE_MODULES),dynamic)
-all:	subdirs M modules
-else
-all:	subdirs M
+MOBJS += util/LeakTracer.o
 endif
 
 M:	$(MOBJS)
@@ -56,19 +54,16 @@ static: subdirs
 	$(LINK) -static -o M.static $(LDFLAGS) $(MOBJS) $(LIBS)
 
 subdirs:
-	set -e; for i in $(SUB_DIRS) modules; do $(MAKE) -C $$i all; done
-
-modules:
-	set -e; for i in $(MOD_DIRS) modules; do $(MAKE) -C $$i modules; done
+	set -e; for i in $(SUB_DIRS); do $(MAKE) -C $$i all; done
 
 doc:
 	@true
 
 clean:
-	set -e; for i in $(SUB_DIRS) modules; do $(MAKE) -C $$i $@; done
+	set -e; for i in $(SUB_DIRS); do $(MAKE) -C $$i $@; done
 	$(RM) core libM.so M M.static
 
-install: install-modules
+install:
 	$(INSTALL_PROGRAM) -s -m 555 M $(DATADIR)/$(CANONICAL_HOST)/bin
 	if test -f libM.so; \
 	then $(INSTALL_PROGRAM) libM.so $(DATADIR)/$(CANONICAL_HOST)/lib; \
@@ -77,6 +72,9 @@ install: install-modules
 	ln -f -s ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)/M
 	$(RM) $(BINDIR)/mahogany
 	ln -f -s ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)/mahogany
+ifeq ($(USE_MODULES),dynamic)
+	set -e; for i in $(MOD_DIRS); do $(MAKE) -C $$i install-modules; done
+endif
 	$(INSTALL) -d $(DATADIR)/icons
 	for i in .src/icons/*.xpm; \
 	do $(INSTALL_DATA) $$i $(DATADIR)/icons; \
@@ -85,19 +83,8 @@ ifdef USE_PYTHON
 	$(MAKE) -C Python $@
 endif
 
-# This must call modules-install for all modules directories:
-#
-install-modules:
-ifeq ($(USE_MODULES),dynamic)
-	$(MAKE) -C modules install
-	set -e; for i in $(MOD_DIRS); do $(MAKE) -C $$i $@; done
-else
-	@true
-endif
-
 msgcat:
-	set -e; for i in $(SUB_DIRS) modules; do $(MAKE) -C $$i $@; done
+	set -e; for i in $(SUB_DIRS); do $(MAKE) -C $$i $@; done
 #	$(MAKE) -C $(BUILDDIR)/locale mergecat
 
-.PHONY:	all clean doc semistatic static allclean install msgcat \
-	subdirs install-modules modules main
+.PHONY:	all clean doc semistatic static allclean install msgcat subdirs
