--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -1,12 +1,12 @@
 # Makefile for src/adb directory
 
-SRC = AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
-      AdbDialogs.cpp ProvFC.cpp ProvBbdb.cpp ProvPalm.cpp \
-      AdbModule.cpp AdbImport.cpp AdbExport.cpp
+SRC :=	AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
+	AdbDialogs.cpp ProvFC.cpp ProvBbdb.cpp ProvPalm.cpp \
+	AdbModule.cpp AdbImport.cpp AdbExport.cpp
 
-MOD = ImportText.cpp ImportXFMail.cpp ImportPine.cpp \
-      ImportMailrc.cpp ImportVCard.cpp \
-      ExportPalm.cpp ExportText.cpp ExportVCard.cpp
+MOD :=	ImportText.cpp ImportXFMail.cpp ImportPine.cpp \
+	ImportMailrc.cpp ImportVCard.cpp \
+	ExportPalm.cpp ExportText.cpp ExportVCard.cpp
 
 ifdef DEBUG
 SRC += ProvDummy.cpp
@@ -14,13 +14,14 @@ endif
 
 include ../../makeopts
 
+# indirection to pick up definitions in makerules
 all:	binaries
 	@true
 
 include ../../makerules $(wildcard *.d)
 
-# MODOBJS defined by makerules
-binaries: $(MODOBJS) $(SRC:.cpp=.o)
+# MODOBJS and MODULES defined by makerules
+binaries: $(SRC:.cpp=.o) $(MODOBJS) $(MODULES)
 	@true
 
 clean: stdclean
