--- a/makeopts.in
+++ b/makeopts.in
@@ -11,8 +11,6 @@ CCLIENTOSTYPE=@CCOSTYPE@
 CCLIENT_EXTRAAUTHENTICATORS=@CCLIENT_EXTRAAUTHENTICATORS@
 CCLIENT_EXTRACFLAGS=@CCLIENT_EXTRACFLAGS@
 
-SSL_LIBS=@SSL_LIBS@
-
 # where we have the Icon xpms:
 ICONDIR=$(SOURCEDIR)/src/icons
 
@@ -113,7 +111,7 @@ CXXFLAGS = @CXXFLAGS@
 CXXFLAGS_RELAXED = @CXXFLAGS_RELAXED@
 LDFLAGS = @LDFLAGS@
 
-LIBS=$(MODULES_LIBS) $(SSL_LIBS) $(SWIG_LIBS) @LIBS@ 
-LIBS_STATIC=$(MODULES_LIBS) $(SSL_LIBS) $(SWIG_LIBS) @LIBS_STATIC@ 
+LIBS=$(MODULES_LIBS) $(SWIG_LIBS) @LIBS@ 
+LIBS_STATIC=$(MODULES_LIBS) $(SWIG_LIBS) @LIBS_STATIC@ 
 GUI_LIBS=@GTK_LDFLAGS@
 GUI_LIBS_STATIC=@GUI_LIBS_STATIC@
