--- a/makeopts.in
+++ b/makeopts.in
@@ -9,7 +9,7 @@ top_builddir=@BUILDDIR@
 # the c-client library:
 CCLIENTOSTYPE=@CCOSTYPE@
 CCLIENT_EXTRAAUTHENTICATORS=@CCLIENT_EXTRAAUTHENTICATORS@
-CCLIENT_EXTRACFLAGS=@CCLIENT_EXTRACFLAGS@
+CCLIENT_EXTRACFLAGS=EXTRACFLAGS="@CCLIENT_EXTRACFLAGS@"
 
 # where we have the Icon xpms:
 ICONDIR=$(SOURCEDIR)/src/icons
