Fix rules so SWIG works.  Resynchronize SWIG *.i files with generated *.cpp-swig and *.py-swig files.  A little cleanup.

--- a/makeopts.in
+++ b/makeopts.in
@@ -60,7 +60,7 @@ PSTOPDF	:= @PSTOPDF@
 
 # compiler stuff
 CPP	:= @CPP@
-CPPFLAGS:= @CPPFLAGS@
+CPPFLAGS= @CPPFLAGS@
 CC	:= @CC@
 CXX	:= @CXX@
 LIBTOOL	:= @LIBTOOL@
