--- a/makeversion.in
+++ b/makeversion.in
@@ -9,6 +9,7 @@ M_PATCHLEVEL=0
 
 rm -f makeversion
 cat <<EOF >makeversion
+# DO NOT EDIT - generated file
 # Mahogany version/release/patchlevel
 M_VERSION_MAJOR	:= $M_VERSION_MAJOR
 M_VERSION_MINOR	:= $M_VERSION_MINOR
@@ -18,6 +19,7 @@ EOF
 
 rm -f conftmp
 cat <<EOF >conftmp
+// DO NOT EDIT - generated file
 // //// //// //// //// //// //// //// //// //// //// //// //// //// //// //////
 // Project:	Mahogany
 // File name:	version.h - contains the M version and patchlevel
