attempt to improve dependencies for .deb package

--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,14 @@
 Source: mahogany
-Section: unknown
+Section: x11
 Priority: optional
 Maintainer: Karsten Ballüder <ballueder@gmx.net>
 Standards-Version: 2.5.0
 
 Package: mahogany
 Architecture: any
+Depends: (libstdc++2.9, libstdc++2.10) (libgtk >= 1.2.8)
 Depends: ${shlibs:Depends}
+Suggests: openssl, python
 Description: Mahogany, powerful and user-friendly mail/news client for X11.
  Mahogany is a mail and news client for X11, using the gtk toolkit. It
  supports a wide range of standards and protocols, including IMAP and POP3.
