--- a/makeopts.in
+++ b/makeopts.in
@@ -80,9 +80,13 @@ SWIGFLAGS := $(SWIGFLAGS_LIBSWIG) -dhtml -c
 # other stuff
 RM	:= rm -f
 M4	:= @M4@ 
-INSTALL	:= @INSTALL@
-INSTALL_PROGRAM	:= @INSTALL_PROGRAM@
-INSTALL_DATA	:= @INSTALL_DATA@
+# currently broken in configure:
+#INSTALL	:= @INSTALL@
+#INSTALL_PROGRAM	:= @INSTALL_PROGRAM@
+#INSTALL_DATA	:= @INSTALL_DATA@
+INSTALL	:= $(BUILDDIR)/extra/scripts/install-sh
+INSTALL_PROGRAM	:= $(INSTALL)
+INSTALL_DATA	:= $(INSTALL)
 
 DESTDIR = @prefix@
 # Directory in which to install scripts.
