--- a/makeopts.in
+++ b/makeopts.in
@@ -81,9 +81,12 @@ SWIGFLAGS := $(SWIGFLAGS_LIBSWIG) -dhtml -c
 RM	:= rm -f
 M4	:= @M4@ 
 # currently broken in configure:
-INSTALL	:= @INSTALL@
-INSTALL_PROGRAM	:= @INSTALL_PROGRAM@
-INSTALL_DATA	:= @INSTALL_DATA@
+#INSTALL	:= @INSTALL@
+#INSTALL_PROGRAM	:= @INSTALL_PROGRAM@
+#INSTALL_DATA	:= @INSTALL_DATA@
+INSTALL	:= "$(BUILDDIR)/extra/scripts/install-sh -c"
+INSTALL_PROGRAM	:= "$(INSTALL) -s"
+INSTALL_DATA	:= $(INSTALL)
 
 DESTDIR = @prefix@
 # Directory in which to install scripts.
