--- a/makeopts.in
+++ b/makeopts.in
@@ -84,9 +84,9 @@ M4	:= @M4@
 #INSTALL	:= @INSTALL@
 #INSTALL_PROGRAM	:= @INSTALL_PROGRAM@
 #INSTALL_DATA	:= @INSTALL_DATA@
-INSTALL	:= "$(BUILDDIR)/extra/scripts/install-sh -c"
-INSTALL_PROGRAM	:= "$(INSTALL) -s"
-INSTALL_DATA	:= $(INSTALL)
+INSTALL	:= $(BUILDDIR)/extra/scripts/install-sh -c
+INSTALL_PROGRAM	:= $(INSTALL) -s
+INSTALL_DATA	:= $(INSTALL) -c
 
 DESTDIR = @prefix@
 # Directory in which to install scripts.
