The install script is in the source tree, not the object tree.

--- a/makeopts.in
+++ b/makeopts.in
@@ -84,7 +84,7 @@ M4	:= @M4@
 #INSTALL	:= @INSTALL@
 #INSTALL_PROGRAM	:= @INSTALL_PROGRAM@
 #INSTALL_DATA	:= @INSTALL_DATA@
-INSTALL	:= $(BUILDDIR)/extra/scripts/install-sh -c
+INSTALL	:= $(SOURCEDIR)/extra/scripts/install-sh -c
 INSTALL_PROGRAM	:= $(INSTALL) -s
 INSTALL_DATA	:= $(INSTALL) -c -m 644
 
