--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 2.5.0
 Package: mahogany
 Architecture: any
 Depends: ${shlibs:Depends}
-Suggests: openssl, python
+Suggests: libssl09, python
 Description: Mahogany, powerful and user-friendly mail/news client for X11.
  Mahogany is a mail and news client for X11, using the gtk toolkit. It
  supports a wide range of standards and protocols, including IMAP and POP3.
