misc changes, see m-developers

--- a/configure.in
+++ b/configure.in
@@ -355,18 +355,29 @@ case "$USE_PROFILER" in 1)
 	MYFLAGS="$MYFLAGS -pg"
 esac
 
-dnl experimental code (unstable!)
 case "$USE_EXPERIMENTAL" in
 1)	AC_DEFINE(EXPERIMENTAL)
+ 	CPPFLAGS="$CPPFLAGS -DEXPERIMENTAL"
+        MAKE_EXPERIMENTAL="EXPERIMENTAL=yes"
+        EXPERIMENTAL="$USER"
+        ;;
+0)	MAKE_EXPERIMENTAL='' 
+	EXPERIMENTAL=""
+	;;
+*)	AC_DEFINE(EXPERIMENTAL)
 	CPPFLAGS="$CPPFLAGS -DEXPERIMENTAL"
-	if test -z "$EXPERIMENTAL" ; then EXPERIMENTAL="$USER"; fi
-	for i in $EXPERIMENTAL
-	do
-	  CPPFLAGS="$CPPFLAGS -DEXPERIMENTAL_$i"
-	done  
-	MAKE_EXPERIMENTAL="EXPERIMENTAL=yes" ;;
-*)	MAKE_EXPERIMENTAL='' ;;
+        MAKE_EXPERIMENTAL='EXPERIMENTAL=yes'
+        EXPERIMENTAL="$USE_EXPERIMENTAL"
+        ;;
 esac
+
+if test ! -z "$EXPERIMENTAL" ; then
+  EXPERIMENTAL=`echo $EXPERIMENTAL | sed '1,$ s/,/ /g'`
+  for i in $EXPERIMENTAL
+  do
+	CPPFLAGS="$CPPFLAGS -DEXPERIMENTAL_$i"
+  done  
+fi
 AC_SUBST(MAKE_EXPERIMENTAL)
 
 dnl precompiled headers
